src/components/index.css
html, body {
  min-height: 100%;
}

body {
  margin: 0;
  width: 100%;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  --extent-color: #ddbb00;
  --extent-faint: #ddbbaa;
  --intent-color: #4444bb;
  --intent-faint: #8888ff;
  --clear: #ffffff;
  --highlight-color: #55dd55;
  --default-black: #000000;
  --greyed-out: #aaaaaa;

  --label-lower-indicator: label_lower_indicator;
  --label-upper-indicator: label_upper_indicator;

  --attribute: attribute;
  --object: object;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

/*@media (prefers-color-scheme: light) {*/
/*  :root {*/
/*    color: #213547;*/
/*    background-color: #ffffff;*/
/*  }*/
/*  a:hover {*/
/*    color: #747bff;*/
/*  }*/
/*  button {*/
/*    background-color: #f9f9f9;*/
/*  }*/
/*}*/

.row {
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 10px;
  margin-top: 1em;
  align-items: center;
}

.row-middle {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.column {
  display: flex;
  flex-direction: column;
  height: 100%
}

.card {
  background: rgba(128, 128, 128, 0.3);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(128, 128, 128, 0.1);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  border: 1px solid #242424;
  padding: 1em;
}

.line {
  width: 100%;
  border-color: #242424;
  background-color: #242424;
}

.legend {
  position: absolute;
  bottom: 1.5em;
  right: 1.5em;
  max-width: 30%;
}

